--- a/charts/kubezero-telemetry/dashboards.yaml
+++ b/charts/kubezero-telemetry/dashboards.yaml
@@ -12,3 +12,10 @@ dashboards:
   tags:
   - OpenSearch
   - Telemetry
+- name: fluent-logging
+  url: https://grafana.com/api/dashboards/7752/revisions/6/download
+  #url: https://grafana.com/api/dashboards/13042/revisions/2/download
+  tags:
+  - fluentd
+  - fluent-bit
+  - Telemetry
