feat: add fluent-bit to new telemetry module, upgrade OpenSearch version ,various tweaks

--- a/charts/kubezero-telemetry/Chart.yaml
+++ b/charts/kubezero-telemetry/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-telemetry
 description: KubeZero Umbrella Chart for OpenTelemetry, Jaeger etc.
 type: application
-version: 0.2.4
+version: 0.3.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -18,15 +18,19 @@ dependencies:
     version: ">= 0.1.6"
     repository: https://cdn.zero-downtime.net/charts/
   - name: opentelemetry-collector
-    version: 0.91.0
+    version: 0.92.0
     repository: https://open-telemetry.github.io/opentelemetry-helm-charts
     condition: opentelemetry-collector.enabled
   - name: jaeger
-    version: 3.0.7
+    version: 3.0.8
     repository: https://jaegertracing.github.io/helm-charts
     condition: jaeger.enabled
   - name: fluentd
     version: 0.5.2
     repository: https://fluent.github.io/helm-charts
     condition: fluentd.enabled
+  - name: fluent-bit
+    version: 0.46.2
+    repository: https://fluent.github.io/helm-charts
+    condition: fluent-bit.enabled
 kubeVersion: ">= 1.26.0"
