--- a/charts/kubezero-telemetry/charts/fluentd/templates/tests/test-connection.yaml
+++ b/charts/kubezero-telemetry/charts/fluentd/templates/tests/test-connection.yaml
@@ -4,6 +4,7 @@ fluentd is deployed with the default values
 If the fluentd config is overriden and the metrics server removed
 this will fail.
 */}}
+{{- if .Values.testFramework.enabled }}
 {{ if empty .Values.service.ports }}
 apiVersion: v1
 kind: Pod
@@ -27,3 +28,4 @@ spec:
           wget '{{ include "fluentd.fullname" . }}:24231/metrics'
   restartPolicy: Never
 {{ end }}
+{{- end }}
