--- a/charts/kubezero-telemetry/charts/fluentd/values.yaml
+++ b/charts/kubezero-telemetry/charts/fluentd/values.yaml
@@ -13,6 +13,9 @@ image:
   pullPolicy: "IfNotPresent"
   tag: ""
 
+testFramework:
+  enabled: false
+
 ## Optional array of imagePullSecrets containing private registry credentials
 ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
