--- a/charts/kubezero-telemetry/dashboards.yaml
+++ b/charts/kubezero-telemetry/dashboards.yaml
@@ -1,6 +1,7 @@
 configmap: grafana-dashboards
 gzip: true
 folder: Telemetry
+#condition: '.Values.telemetry.metrics.enabled'
 dashboards:
 - name: jaeger
   url: https://grafana.com/api/dashboards/10001/revisions/2/download
