fix: improved crd handling, version bumps of network, new HAProxy support, argocd auth fix

--- a/charts/kubezero-argo/templates/argo-cd/istio-authorization-policy.yaml
+++ b/charts/kubezero-argo/templates/argo-cd/istio-authorization-policy.yaml
@@ -19,7 +19,7 @@ spec:
         {{- toYaml (index .Values "argo-cd" "istio" "ipBlocks") | nindent 8 }}
     to:
     - operation:
-        hosts: [{{ index .Values "argo-cd" "configs" "cm" "url" | quote }}]
+        hosts: [{{ get (urlParse (index .Values "argo-cd" "configs" "cm" "url")) "host" }}]
     when:
     - key: connection.sni
       values:
