--- a/charts/kubezero-network/templates/multus/crds.yaml
+++ b/charts/kubezero-network/templates/multus/crds.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.multus.enabled }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -42,3 +43,4 @@ spec:
                 config:
                   description: 'NetworkAttachmentDefinition config is a JSON-formatted CNI configuration'
                   type: string
+{{- end }}
