--- a/charts/kubezero-ci/values.yaml
+++ b/charts/kubezero-ci/values.yaml
@@ -2,7 +2,7 @@ gitea:
   enabled: false
 
   image:
-    tag: 1.21.11
+    # tag: 1.21.11
     rootless: true
 
   repliaCount: 1
@@ -67,8 +67,8 @@ gitea:
       queue:
         TYPE: level
       ui:
-        THEMES: "gitea,github-dark"
-        DEFAULT_THEME: "github-dark"
+        THEMES: "gitea-light,gitea-dark,github-dark"
+        DEFAULT_THEME: "gitea-dark"
       log:
         LEVEL: warn
 
@@ -210,6 +210,7 @@ jenkins:
     # - name: AWS_ROLE_ARN
     #   value: "<IAM ROLE ARN>"
     yamlMergeStrategy: "merge"
+    inheritYamlMergeStrategy: true
     yamlTemplate: |-
       apiVersion: v1
       kind: Pod
