fix: make ISM policu apply to default indicies, latest CI module

--- a/charts/kubezero-telemetry/templates/opensearch/ism-policy.yaml
+++ b/charts/kubezero-telemetry/templates/opensearch/ism-policy.yaml
@@ -31,4 +31,8 @@ spec:
      - name: delete
        actions:
          - delete: {}
+   ismTemplate:
+     indexPatterns:
+       - "logstash-*"
+       - "jaeger-*"
 {{- end }}
