ci: only merge into main for Renovate

--- a/renovate.json
+++ b/renovate.json
@@ -17,6 +17,5 @@
     }
   ],
   "ignorePaths": ["charts/*/charts/**"],
-  "enabledManagers": ["dockerfile", "helmv3", "helm-values"],
-  "baseBranches": ["$default", "/^release\\/.*/"]
+  "enabledManagers": ["dockerfile", "helmv3", "helm-values"]
 }
