--- a/charts/kubezero-telemetry/charts/fluent-bit/Chart.yaml
+++ b/charts/kubezero-telemetry/charts/fluent-bit/Chart.yaml
@@ -1,9 +1,9 @@
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Updated _Fluent Bit_ OCI image to [v3.0.2](https://github.com/fluent/fluent-bit/releases/tag/v3.0.2)."
+      description: "Updated Fluent Bit OCI image to v3.1.1."
 apiVersion: v1
-appVersion: 3.0.2
+appVersion: 3.1.1
 description: Fast and lightweight log processor and forwarder or Linux, OSX and BSD
   family operating systems.
 home: https://fluentbit.io/
@@ -24,4 +24,4 @@ maintainers:
 name: fluent-bit
 sources:
 - https://github.com/fluent/fluent-bit/
-version: 0.46.2
+version: 0.47.1
