--- a/charts/kubezero-telemetry/charts/fluent-bit/templates/service.yaml
+++ b/charts/kubezero-telemetry/charts/fluent-bit/templates/service.yaml
@@ -17,6 +17,9 @@ spec:
   {{- if and (eq .Values.service.type "ClusterIP") (.Values.service.clusterIP) }}
   clusterIP: {{ .Values.service.clusterIP }}
   {{- end }}
+  {{- if .Values.service.externalIPs }}
+  externalIPs: {{- toYaml .Values.service.externalIPs | nindent 4 }}
+  {{- end }}
   {{- if (eq .Values.kind "DaemonSet") }}
   {{- with .Values.service.internalTrafficPolicy }}
   internalTrafficPolicy: {{ . }}
