--- a/charts/kubezero-telemetry/Chart.yaml
+++ b/charts/kubezero-telemetry/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-telemetry
 description: KubeZero Umbrella Chart for OpenTelemetry, Jaeger etc.
 type: application
-version: 0.3.3
+version: 0.4.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -10,6 +10,7 @@ keywords:
   - otel
   - OpenTelemetry
   - jaeger
+  - dataprepper
 maintainers:
   - name: Stefan Reimer
     email: stefan@zero-downtime.net
@@ -21,6 +22,10 @@ dependencies:
     version: 0.97.1
     repository: https://open-telemetry.github.io/opentelemetry-helm-charts
     condition: opentelemetry-collector.enabled
+  - name: data-prepper
+    version: 0.1.0
+    repository: https://opensearch-project.github.io/helm-charts/
+    condition: data-prepper.enabled
   - name: jaeger
     version: 3.1.1
     repository: https://jaegertracing.github.io/helm-charts
