feat: First v1.29 basic control plane working

--- a/charts/kubeadm/templates/KubeletConfiguration.yaml
+++ b/charts/kubeadm/templates/KubeletConfiguration.yaml
@@ -33,5 +33,6 @@ kubeReserved:
 #evictionHard:
 #  memory.available: "484Mi"
 imageGCLowThresholdPercent: 70
+imageMaximumGCAge: 168h
 serializeImagePulls: false
 maxParallelImagePulls: 4
