--- a/charts/kubezero-telemetry/templates/opensearch/cluster.yaml
+++ b/charts/kubezero-telemetry/templates/opensearch/cluster.yaml
@@ -21,6 +21,7 @@ spec:
       runAsUser: 1000
       runAsGroup: 1000
       runAsNonRoot: true
+      fsGroup: 1000
     securityContext:
       allowPrivilegeEscalation: false
       privileged: false
